# sel4test

apps/hello/: CMakeLists.txt
apps/hello/src/: main.c
apps/sel4test-driver/: CMakeLists.txt
apps/sel4test-driver/src/: main.c  rpe.c  test.h
